test/errors/list/append_bad_type.np
l = [1, 2, 3]
l.append("four")
